ハンバーガーメニュー

--- a/access/index.html
+++ b/access/index.html
@@ -27,9 +27,42 @@
   <div class="header-icons">
     <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
     <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
-  
-    <img class="hamberger" src="../images/hamburger_menu/hamburgerbtn_blue.png" alt="">
+
+
+    <!-- hamberger -->
+    <nav class="hamburger-wrapper">
+      <ul class="hamburger-nav">
+        <li class="hamburger-item"><a href="../index.html">ホーム</a></li>
+        <li class="hamburger-item"><a href="../about/index.html">プリンス進学塾とは</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../about/index.html#about-feature">特徴</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../about/index.html#about-greeting">塾長あいさつ</a></li>
+        <li class="hamburger-item"><a href="../elementary/index.html">小学生</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-policy">指導方針</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-schedule">時間割</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-fee">料金</a></li>
+        <li class="hamburger-item"><a href="../juniorhighschool/index.html">中学生</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-policy">指導方針</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-schedule">時間割</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-fee">料金</a></li>
+        <li class="hamburger-item"><a href="../faq/index.html">よくあるご質問</a></li>
+        <li class="hamburger-item"><a href="../access/index.html">アクセス</a></li>
+        <li class="hamburger-item"><a href="../contact/index.html">お問い合わせ</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#trial-lesson">無料体験授業</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#document-request">資料請求</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#other">その他お問い合わせ</a></li>
+      </ul>
+    </nav>
+
+    <div class="burger-btn">
+      <span class="bar bar_top"></span>
+      <span class="bar bar_mid"></span>
+      <span class="bar bar_bottom"></span>
+    </div>
+    <!-- /hamberger -->
     
+
+    <!-- <img class="hamberger" src="../images/hamburger_menu/hamburgerbtn_blue.png" alt="" id="nav-toggle"> -->
+      
     <div class="header-btns">
       <a href="../contact/index.html#trial-lesson">
         <div class="experience-btn">
@@ -71,6 +104,7 @@
     </div>
   </section>
   <!-- /eyechatch -->
+  
 
   <!-- access -->
   <section> 
@@ -184,5 +218,9 @@
   </div>
 </footer>
 <!-- /footer -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="../js/script.js"></script>
+
 </body>
 </html>
