--- a/access/index.html
+++ b/access/index.html
@@ -157,6 +157,41 @@
 <!-- footer -->
 <footer class="footer">
   <div class="footer-inner">
+
+    <!-- テスト -->
+    <nav class="footer-nav">
+      <ul class="footer-nav-list">
+        <li class="footer-nav-item">
+          <a href="tel:0178221355">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_tel.png" alt="">
+            <span>お電話</span>
+          </a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="../contact/index.html#trial-lesson">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_study.png" alt="">
+            <span>無料体験授業</span>
+          </a>
+        </li>
+        <li class="footer-nav-item">
+          <!-- <a href="../contact/index.html#document-request"> -->
+          <a href="../contact/index.html#test">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_memo.png" alt="">
+            <span>資料請求</span>
+          </a>
+        </li>
+
+      </ul>
+    </nav>
+    <!-- テスト -->
+
+
+
+
+
+
+
+
     <div class="logo-and-access">
       <a href="../index.html">
         <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
