--- a/access/index.html
+++ b/access/index.html
@@ -59,9 +59,6 @@
       <span class="bar bar_bottom"></span>
     </div>
     <!-- /hamberger -->
-    
-
-    <!-- <img class="hamberger" src="../images/hamburger_menu/hamburgerbtn_blue.png" alt="" id="nav-toggle"> -->
       
     <div class="header-btns">
       <a href="../contact/index.html#trial-lesson">
@@ -121,7 +118,7 @@
           受付時間　月〜土曜　16:00〜21:30</p>
       </div>
       <div class="access-menubar">
-        <a href="https://www.google.co.jp/maps/place/%E3%83%97%E3%83%AA%E3%83%B3%E3%82%B9%E9%80%B2%E5%AD%A6%E5%A1%BE/@40.5077064,141.4846764,17z/data=!3m1!4b1!4m5!3m4!1s0x5f9b520991f652c3:0x1f79258b713c7165!8m2!3d40.5077064!4d141.4868651?hl=ja" class="menubar">
+        <a href="https://www.google.co.jp/maps/place/%E3%83%97%E3%83%AA%E3%83%B3%E3%82%B9%E9%80%B2%E5%AD%A6%E5%A1%BE/@40.5077064,141.4846764,17z/data=!3m1!4b1!4m5!3m4!1s0x5f9b520991f652c3:0x1f79258b713c7165!8m2!3d40.5077064!4d141.4868651?hl=ja" class="menubar" target="_blank" rel="noopener noreferrer">
           <span>Google mapを見る</span>
         </a>
       </div>
@@ -158,7 +155,7 @@
 <footer class="footer">
   <div class="footer-inner">
 
-    <!-- テスト -->
+    <!-- bottom-nav -->
     <nav class="footer-nav">
       <ul class="footer-nav-list">
         <li class="footer-nav-item">
@@ -174,23 +171,14 @@
           </a>
         </li>
         <li class="footer-nav-item">
-          <!-- <a href="../contact/index.html#document-request"> -->
-          <a href="../contact/index.html#test">
+          <a href="../contact/index.html#document-request">
             <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_memo.png" alt="">
             <span>資料請求</span>
           </a>
         </li>
-
       </ul>
     </nav>
-    <!-- テスト -->
-
-
-
-
-
-
-
+    <!-- /bottom-nav -->
 
     <div class="logo-and-access">
       <a href="../index.html">
@@ -207,8 +195,8 @@
         </div>
       </a>
       <p class="footer-text">031-0041 <br>青森県八戸市二十三日町14</p>
-      <img class="facebook-icon" src="../images/common/hp/facebook_blue.png" alt="">
-      <img class="facebook-icon-sp" src="../images/common/sp/facebook_blue.png" alt="">
+      <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer"><img class="facebook-icon" src="../images/common/hp/facebook_blue.png" alt=""></a>
+      <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer"><img class="facebook-icon-sp" src="../images/common/sp/facebook_blue.png" alt=""></a>
     </div>
 
     <div class="footer-navigations">
@@ -254,8 +242,8 @@
 </footer>
 <!-- /footer -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 <script src="../js/script.js"></script>
-
 </body>
 </html>
