--- a/elementary/index.html
+++ b/elementary/index.html
@@ -28,7 +28,36 @@
     <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
     <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
   
-    <img class="hamberger" src="../images/hamburger_menu/hamburgerbtn_blue.png" alt="">
+    <!-- hamberger -->
+    <nav class="hamburger-wrapper">
+      <ul class="hamburger-nav">
+        <li class="hamburger-item"><a href="../index.html">ホーム</a></li>
+        <li class="hamburger-item"><a href="../about/index.html">プリンス進学塾とは</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../about/index.html#about-feature">特徴</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../about/index.html#about-greeting">塾長あいさつ</a></li>
+        <li class="hamburger-item"><a href="../elementary/index.html">小学生</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-policy">指導方針</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-schedule">時間割</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-fee">料金</a></li>
+        <li class="hamburger-item"><a href="../juniorhighschool/index.html">中学生</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-policy">指導方針</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-schedule">時間割</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-fee">料金</a></li>
+        <li class="hamburger-item"><a href="../faq/index.html">よくあるご質問</a></li>
+        <li class="hamburger-item"><a href="../access/index.html">アクセス</a></li>
+        <li class="hamburger-item"><a href="../contact/index.html">お問い合わせ</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#trial-lesson">無料体験授業</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#document-request">資料請求</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#other">その他お問い合わせ</a></li>
+      </ul>
+    </nav>
+
+    <div class="burger-btn">
+      <span class="bar bar_top"></span>
+      <span class="bar bar_mid"></span>
+      <span class="bar bar_bottom"></span>
+    </div>
+    <!-- /hamberger -->
     
     <div class="header-btns">
       <a href="../contact/index.html#trial-lesson">
@@ -67,8 +96,8 @@
   <!-- eyechatch -->
   <section class="eyechatch">
     <div class="eyechatch-inner">
-      <img class="eyechatch-pc-img" src="../images/elementaryschool/hp/mv_boy_hp.jpg" alt="授業を受ける男子小学生">
-      <img class="eyechatch-sp-img" src="../images/elementaryschool/sp/mv_boy_sp.jpg" alt="授業を受ける男子小学生">
+      <img class="eyechatch-pc-img" src="../images/elementary/hp/mv_boy_hp.jpg" alt="授業を受ける男子小学生">
+      <img class="eyechatch-sp-img" src="../images/elementary/sp/mv_boy_sp.jpg" alt="授業を受ける男子小学生">
       <h1 class="eyechatch-text">小学生</h1>
     </div>
   </section>
@@ -85,46 +114,46 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/elementaryschool/hp/01_hp.png" alt="数字01">
-          <img class="number-sp-img" src="../images/elementaryschool/sp/01_blue_sp.png" alt="数字01">
+          <img class="number-pc-img" src="../images/elementary/hp/01_hp.png" alt="数字01">
+          <img class="number-sp-img" src="../images/elementary/sp/01_blue_sp.png" alt="数字01">
           <h3 class="policy-item-title">分かりやすく<br class="not-new-line">ていねいに教えます</h3>
           <p class="policy-item-text">小学校で学ぶ内容は一生の知識のもととなる、とても重要なものばかりです。<br>
             塾では教科書に沿って分かりやすくていねいに教え、将来の勉強に必要な学力がしっかり身につくよう、責任を持ってご指導いたします。
           </p>
         </div>
         <div class="policy-item-img">
-          <img class="policy-item-pc-img" src="../images/elementaryschool/hp/pencil_hp.jpg" alt="鉛筆を持って問題を解く">
-          <img class="policy-item-sp-img" src="../images/elementaryschool/sp/pencil_sp.jpg" alt="鉛筆を持って問題を解く">
+          <img class="policy-item-pc-img" src="../images/elementary/hp/pencil_hp.jpg" alt="鉛筆を持って問題を解く">
+          <img class="policy-item-sp-img" src="../images/elementary/sp/pencil_sp.jpg" alt="鉛筆を持って問題を解く">
         </div>
       </div>
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/elementaryschool/hp/02_hp.png" alt="数字02">
-          <img class="number-sp-img" src="../images/elementaryschool/sp/02_blue_sp.png" alt="数字02">
+          <img class="number-pc-img" src="../images/elementary/hp/02_hp.png" alt="数字02">
+          <img class="number-sp-img" src="../images/elementary/sp/02_blue_sp.png" alt="数字02">
           <h3 class="policy-item-title">勉強の苦手をなくします</h3>
           <p class="policy-item-text">小学生の時期に苦手ができると、中学・高校へ行ってからたいへん苦労します。<br>
             塾では「DB（データベース）学習システム」を使用してコンピューターでつまずきのポイントを分析、たくさんの問題の中から一人ひとりの弱点にあわせた対策問題を作成して苦手を克服します。
           </p>
         </div>
         <div class="policy-item-img">
-          <img class="policy-item-pc-img" src="../images/elementaryschool/hp/data_hp.jpg" alt="円グラフや棒グラフのデータ">
-          <img class="policy-item-sp-img" src="../images/elementaryschool/sp/data_sp.jpg" alt="円グラフや棒グラフのデータ">
+          <img class="policy-item-pc-img" src="../images/elementary/hp/data_hp.jpg" alt="円グラフや棒グラフのデータ">
+          <img class="policy-item-sp-img" src="../images/elementary/sp/data_sp.jpg" alt="円グラフや棒グラフのデータ">
         </div>
       </div>
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img" src="../images/elementaryschool/hp/03_hp.png" alt="数字03">
-          <img class="number-sp-img" src="../images/elementaryschool/sp/03_blue_sp.png" alt="数字03">
+          <img class="number-pc-img" src="../images/elementary/hp/03_hp.png" alt="数字03">
+          <img class="number-sp-img" src="../images/elementary/sp/03_blue_sp.png" alt="数字03">
           <h3 class="policy-item-title">基礎力を伸ばし、<br>がんばる力を育てます</h3>
           <p class="policy-item-text">基礎力がつくと、いろいろな問題が正確にかつ速く解けるようになります。
             塾では重要問題の反復学習に加えて、難易度の高い問題にも挑戦させ、粘り強く考える力を育てます。「分からない」が「分かる」ようになり、学ぶことが楽しくなるようにご指導します。
           </p>
         </div>
         <div class="policy-item-img">
-          <img class="policy-item-pc-img" src="../images/elementaryschool/hp/wallpaper_green_hp.jpg" alt="壁紙が緑色の教室">
-          <img class="policy-item-sp-img" src="../images/elementaryschool/sp/wallpaper_green_sp.jpg" alt="壁紙が緑色の教室">
+          <img class="policy-item-pc-img" src="../images/elementary/hp/wallpaper_green_hp.jpg" alt="壁紙が緑色の教室">
+          <img class="policy-item-sp-img" src="../images/elementary/sp/wallpaper_green_sp.jpg" alt="壁紙が緑色の教室">
         </div>
       </div>
     </div>
@@ -179,8 +208,8 @@
         </div>
         <p class="schedule-text">（複数の教科を受講する場合は、１日に２教科の受講が可能です）</p>
       </div>
-      <img class="schedule-item-pc-img" src="../images/elementaryschool/hp/girls_inclass_hp.jpg" alt="授業中の女子小学生">
-      <img class="schedule-item-sp-img" src="../images/elementaryschool/sp/girls_inclass_sp.jpg" alt="授業中の女子小学生">
+      <img class="schedule-item-pc-img" src="../images/elementary/hp/girls_inclass_hp.jpg" alt="授業中の女子小学生">
+      <img class="schedule-item-sp-img" src="../images/elementary/sp/girls_inclass_sp.jpg" alt="授業中の女子小学生">
     </div>
   </section>
 
@@ -222,8 +251,8 @@
 
 
       <div class="fee-item-02">
-        <img class="fee-item-pc-img" src="../images/elementaryschool/hp/boys_inclass_hp.jpg" alt="授業中の男子小学生">
-        <img class="fee-item-sp-img" src="../images/elementaryschool/sp/boys_inclass_sp.jpg" alt="授業中の男子小学生">
+        <img class="fee-item-pc-img" src="../images/elementary/hp/boys_inclass_hp.jpg" alt="授業中の男子小学生">
+        <img class="fee-item-sp-img" src="../images/elementary/sp/boys_inclass_sp.jpg" alt="授業中の男子小学生">
       </div>
 
       <div class="fee-item-03">
@@ -248,8 +277,8 @@
       </div>
 
       <div class="fee-item-04">
-        <img class="fee-item-pc-img" src="../images/elementaryschool/hp/e_girl_hp.jpg" alt="女子小学生">
-        <img class="fee-item-sp-img" src="../images/elementaryschool/sp/e_girl_sp.jpg" alt="女子小学生">
+        <img class="fee-item-pc-img" src="../images/elementary/hp/e_girl_hp.jpg" alt="女子小学生">
+        <img class="fee-item-sp-img" src="../images/elementary/sp/e_girl_sp.jpg" alt="女子小学生">
       </div>
     </div>
   </section>
@@ -257,8 +286,8 @@
 
   <section class="campaign">
     <div class="campaign-titles">
-      <img class="campaign-icon-pc" src="../images/elementaryschool/hp/icon_balloon.png" alt="風船のアイコン">
-      <img class="campaign-icon-sp" src="../images/elementaryschool/sp/icon_balloon.png" alt="風船のアイコン">
+      <img class="campaign-icon-pc" src="../images/elementary/hp/icon_balloon.png" alt="">
+      <img class="campaign-icon-sp" src="../images/elementary/sp/icon_balloon.png" alt="">
       <h3 class="campaign-title">入会キャンペーン</h3>
     </div>
     <p class="campaign-text">ただ今、入塾キャンペーン実施中です。<br>
@@ -278,6 +307,32 @@
 <!-- footer -->
 <footer class="footer">
   <div class="footer-inner">
+
+    <!-- bottom-nav -->
+    <nav class="footer-nav">
+      <ul class="footer-nav-list">
+        <li class="footer-nav-item">
+          <a href="tel:0178221355">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_tel.png" alt="">
+            <span>お電話</span>
+          </a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="../contact/index.html#trial-lesson">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_study.png" alt="">
+            <span>無料体験授業</span>
+          </a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="../contact/index.html#document-request">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_memo.png" alt="">
+            <span>資料請求</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- /bottom-nav -->
+
     <div class="logo-and-access">
       <a href="../index.html">
         <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
@@ -293,8 +348,8 @@
         </div>
       </a>
       <p class="footer-text">031-0041 <br>青森県八戸市二十三日町14</p>
-      <img class="facebook-icon" src="../images/common/hp/facebook_blue.png" alt="facebookのアイコン">
-      <img class="facebook-icon-sp" src="../images/common/sp/facebook_blue.png" alt="facebookのアイコン">
+      <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer"><img class="facebook-icon" src="../images/common/hp/facebook_blue.png" alt=""></a>
+      <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer"><img class="facebook-icon-sp" src="../images/common/sp/facebook_blue.png" alt=""></a>
     </div>
 
     <div class="footer-navigations">
@@ -339,5 +394,9 @@
   </div>
 </footer>
 <!-- /footer -->
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
