--- a/faq/index.html
+++ b/faq/index.html
@@ -29,7 +29,36 @@
     <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
     <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
   
-    <img class="hamberger" src="../images/hamburger_menu/hamburgerbtn_blue.png" alt="">
+    <!-- hamberger -->
+    <nav class="hamburger-wrapper">
+      <ul class="hamburger-nav">
+        <li class="hamburger-item"><a href="../index.html">ホーム</a></li>
+        <li class="hamburger-item"><a href="../about/index.html">プリンス進学塾とは</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../about/index.html#about-feature">特徴</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../about/index.html#about-greeting">塾長あいさつ</a></li>
+        <li class="hamburger-item"><a href="../elementary/index.html">小学生</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-policy">指導方針</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-schedule">時間割</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../elementary/index.html#ele-fee">料金</a></li>
+        <li class="hamburger-item"><a href="../juniorhighschool/index.html">中学生</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-policy">指導方針</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-schedule">時間割</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../juniorhighschool/index.html#juni-fee">料金</a></li>
+        <li class="hamburger-item"><a href="../faq/index.html">よくあるご質問</a></li>
+        <li class="hamburger-item"><a href="../access/index.html">アクセス</a></li>
+        <li class="hamburger-item"><a href="../contact/index.html">お問い合わせ</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#trial-lesson">無料体験授業</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#document-request">資料請求</a></li>
+        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="../contact/index.html#other">その他お問い合わせ</a></li>
+      </ul>
+    </nav>
+
+    <div class="burger-btn">
+      <span class="bar bar_top"></span>
+      <span class="bar bar_mid"></span>
+      <span class="bar bar_bottom"></span>
+    </div>
+    <!-- /hamberger -->
     
     <div class="header-btns">
       <a href="../contact/index.html#trial-lesson">
@@ -178,6 +207,32 @@
 <!-- footer -->
 <footer class="footer">
   <div class="footer-inner">
+
+    <!-- bottom-nav -->
+    <nav class="footer-nav">
+      <ul class="footer-nav-list">
+        <li class="footer-nav-item">
+          <a href="tel:0178221355">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_tel.png" alt="">
+            <span>お電話</span>
+          </a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="../contact/index.html#trial-lesson">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_study.png" alt="">
+            <span>無料体験授業</span>
+          </a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="../contact/index.html#document-request">
+            <img class="footer-nav-item-img" src="../images/common/sp/bottomnav_icon_memo.png" alt="">
+            <span>資料請求</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- /bottom-nav -->
+
     <div class="logo-and-access">
       <a href="../index.html">
         <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
@@ -193,8 +248,8 @@
         </div>
       </a>
       <p class="footer-text">031-0041 <br>青森県八戸市二十三日町14</p>
-      <img class="facebook-icon" src="../images/common/hp/facebook_blue.png" alt="">
-      <img class="facebook-icon-sp" src="../images/common/sp/facebook_blue.png" alt="">
+      <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer"><img class="facebook-icon" src="../images/common/hp/facebook_blue.png" alt=""></a>
+      <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer"><img class="facebook-icon-sp" src="../images/common/sp/facebook_blue.png" alt=""></a>
     </div>
 
     <div class="footer-navigations">
@@ -239,5 +294,9 @@
   </div>
 </footer>
 <!-- /footer -->
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
