アクセスの空白

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
       <h2>アクセス</h2>
     </div>
     <p class="home-access-text">031-0041　青森県八戸市二十三日町14<br>
-      TEL 0178-22-1355<br>
-      FAX 0178-72-1132<br>
-      受付時間　月〜土曜　16:00〜21:30
+      TEL　&nbsp;&nbsp;0178-22-1355<br>
+      FAX　&nbsp;&nbsp;0178-72-1132<br>
+      受付時間　&nbsp;月〜土曜　16:00〜21:30
     </p>
     <div class="access-map">
       <div class="map-outer">
