--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="tel-btn">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 16:00〜21:30</span></p>
           </div>
         </div>
       </a>
@@ -201,10 +201,10 @@
     <div class="subtitle">
       <h2>アクセス</h2>
     </div>
-    <p class="home-access-text">031-0041　青森県八戸市二十三日町14<br>
-      TEL　&nbsp;&nbsp;0178-22-1355<br>
-      FAX　&nbsp;&nbsp;0178-72-1132<br>
-      受付時間　&nbsp;月〜土曜　16:00〜21:30
+    <p class="home-access-text">031-0041 &nbsp;青森県八戸市二十三日町14<br>
+      TEL &nbsp;&nbsp;0178-22-1355<br>
+      FAX &nbsp;&nbsp;0178-72-1132<br>
+      受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30
     </p>
     <div class="access-map">
       <div class="map-outer">
@@ -289,7 +289,7 @@
         <div class="tel-box">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 16:00〜21:30</span></p>
           </div>
         </div>
       </a>
