--- a/contact/index.html
+++ b/contact/index.html
@@ -69,7 +69,7 @@
         <div class="tel-btn">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
@@ -118,7 +118,7 @@
         </p>
         <p class="inquiry-tel-text">お申し込みはお電話、または下記フォームよりどうぞ</p>
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間　月〜土曜 16:00〜21:30</p>
+        <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
         <div class="access-menubar">
           <a href="./" class="menubar">
             <span>無料体験授業お申込フォーム</span>
@@ -142,7 +142,7 @@
         </p>
         <p class="inquiry-tel-text">お申し込みはお電話、または下記フォームよりどうぞ</p>
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間　月〜土曜 16:00〜21:30</p>
+        <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
         <div class="access-menubar">
           <a href="./" class="menubar">
             <span>資料請求お申込フォーム</span>
@@ -166,7 +166,7 @@
         </p>
         <p class="inquiry-tel-text">お申し込みはお電話、または下記フォームよりどうぞ</p>
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間　月〜土曜 16:00〜21:30</p>
+        <p class="inquiry-tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;&nbsp;16:00〜21:30</p>
         <div class="access-menubar">
           <a href="./" class="menubar">
             <span>その他お問い合わせフォーム</span>
@@ -218,7 +218,7 @@
         <div class="tel-box">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
