--- a/access/index.html
+++ b/access/index.html
@@ -115,7 +115,7 @@
         <p>031-0041 &nbsp;青森県八戸市二十三日町14<br>
           TEL &nbsp;&nbsp;0178-22-1355<br>
           FAX &nbsp;&nbsp;0178-72-1132<br>
-          受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
+          受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
       </div>
       <div class="access-menubar">
         <a href="https://www.google.co.jp/maps/place/%E3%83%97%E3%83%AA%E3%83%B3%E3%82%B9%E9%80%B2%E5%AD%A6%E5%A1%BE/@40.5077064,141.4846764,17z/data=!3m1!4b1!4m5!3m4!1s0x5f9b520991f652c3:0x1f79258b713c7165!8m2!3d40.5077064!4d141.4868651?hl=ja" class="menubar" target="_blank" rel="noopener noreferrer">
@@ -138,7 +138,7 @@
         お気軽にお問い合わせください</p>
 
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間 月〜土曜 16:00〜21:30</p>
+        <p class="inquiry-tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
  
         <div class="access-menubar">
           <a href="../contact/index.html#other" class="menubar">
@@ -190,7 +190,7 @@
         <div class="tel-box">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
