--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
         <div class="tel-btn">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
@@ -115,7 +115,7 @@
         <div class="fe-item-content">
           <img class="number-pc-img" src="../images/about/hp/01_hp.png" alt="">
           <img class="number-sp-img" src="../images/about/sp/01_sp.png" alt="">
-          <h3 class="fe-item-title">生徒・塾・保護者　三位一体の体制</h3>
+          <h3 class="fe-item-title">生徒・塾・保護者 &nbsp;三位一体の体制</h3>
           <p class="fe-item-text">生徒とのふれあいを重視し、何か分からないことがあるときには、どんな質問にもお答えするようにしています。授業以外においても、電話やメール、FAXにて、深夜0時まで質問を受け付けています。
             また、保護者の方を交えた三者面談では、どうすれば成績を伸ばし志望校に合格することができるかを、家庭学習のしかたなども含めてしっかりご提案させていただきます。<br class="not-new-line">塾からは定期的に塾便りや学習カルテ、進学等に関する資料をお送りし、随時、生徒や保護者の方からの学習相談や進路相談もお受けして、三位一体となってお子さまの学力強化を図ります。
           </p>
@@ -161,7 +161,7 @@
   <section class="greeting about" id="about-greeting">
     <div class="subtitle">
       <h2>塾長あいさつ</h2>
-      <p class="about-pc-text">東京大学法学部　八戸高等学校　卒</p>
+      <p class="about-pc-text">東京大学法学部 &nbsp;八戸高等学校 &nbsp;卒</p>
       <p class="about-sp-text">東京大学法学部<br>八戸高等学校卒</p>
     </div>
     <div class="greeting-img_01">
@@ -223,7 +223,7 @@
         <div class="tel-box">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
