--- a/faq/index.html
+++ b/faq/index.html
@@ -70,7 +70,7 @@
         <div class="tel-btn">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
@@ -191,7 +191,7 @@
           お気軽にお問い合わせください
         </p>
         <p class="inquiry-tel"><span class="fa fa-phone tel-icon"></span>0178-22-1355</p>
-        <p class="inquiry-tel-time">受付時間　月〜土曜 16:00〜21:30</p>
+        <p class="inquiry-tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
         <div class="access-menubar">
           <a href="../contact/index.html#other" class="menubar">
             <span>お問い合わせフォームはこちら</span>
@@ -243,7 +243,7 @@
         <div class="tel-box">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間　月〜土曜 16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
