--- a/access/index.html
+++ b/access/index.html
@@ -190,7 +190,7 @@
         <div class="tel-box">
           <div class="tel-btn-inner">
             <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間 &nbsp;&nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
+            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
           </div>
         </div>
       </a>
