--- a/elementary/index.html
+++ b/elementary/index.html
@@ -79,12 +79,35 @@
   <nav class="header-navigations">
     <ul class="nav-list">
       <li class=nav-item><a href="../index.html">ホーム</a></li>
-      <li class=nav-item><a href="../about/index.html">プリンス進学塾について</a></li>
-      <li class=nav-item><a href="../elementary/index.html">小学生</a></li>
-      <li class=nav-item><a href="../juniorhighschool/index.html">中学生</a></li>
+      <li class=nav-item><a href="../about/index.html">プリンス進学塾について</a>
+        <ul class="dropdwn_menu">
+          <li><a href="../about/index.html#about-feature">特徴</a></li>
+          <li><a href="../about/index.html#about-greeting">塾長あいさつ</a></li>
+        </ul>
+      </li>
+      <li class=nav-item><a href="../elementary/index.html">小学生</a>
+        <ul class="dropdwn_menu">
+          <li><a href="../elementary/index.html#ele-policy">指導方針</a></li>
+          <li><a href="../elementary/index.html#ele-schedule">時間割</a></li>
+          <li><a href="../elementary/index.html#ele-fee">料金</a></li>
+        </ul>
+      </li>
+      <li class=nav-item><a href="../juniorhighschool/index.html">中学生</a>
+        <ul class="dropdwn_menu">
+          <li><a href="../juniorhighschool/index.html#juni-policy">指導方針</a></li>
+          <li><a href="../juniorhighschool/index.html#juni-schedule">時間割</a></li>
+          <li><a href="../juniorhighschool/index.html#juni-fee">料金</a></li>
+        </ul>
+      </li>
       <li class=nav-item><a href="../faq/index.html">よくあるご質問</a></li>
       <li class=nav-item><a href="../access/index.html">アクセス</a></li>
-      <li class=nav-item><a href="../contact/index.html">お問い合わせ</a></li>
+      <li class=nav-item><a href="../contact/index.html">お問い合わせ</a>
+        <ul class="dropdwn_menu">
+          <li><a href="../contact/index.html#trial-lesson">無料体験授業</a></li>
+          <li><a href="../contact/index.html#document-request">資料請求</a></li>
+          <li><a href="../contact/index.html#other">その他</a></li>
+        </ul>
+      </li>
     </ul>
   </nav>
 </header>
