elementary 時間割fontsize変更

--- a/elementary/index.html
+++ b/elementary/index.html
@@ -204,27 +204,27 @@
             <dl>
               <div class="monday">
                 <dt>月曜日</dt>
-                <dd>17:10〜18:00 または 18:10〜19:00</dd>
+                <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
               <div class="tuesday">
                 <dt>火曜日</dt>
-                <dd>17:10〜18:00 または 18:10〜19:00</dd>
+                <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
               <div class="wednesday">
                 <dt>水曜日</dt>
-                <dd>17:10〜18:00 または 18:10〜19:00</dd>
+                <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
               <div class="thursday">
                 <dt>木曜日</dt>
-                <dd>17:10〜18:00 または 18:10〜19:00</dd>
+                <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
               <div class="friday">
                 <dt>金曜日</dt>
-                <dd>17:10〜18:00 または 18:10〜19:00</dd>
+                <dd>17:10〜18:00 &nbsp;または &nbsp;18:10〜19:00</dd>
               </div>
               <div class="saturday">
                 <dt>土曜日</dt>
-                <dd>13:30〜14:20 または 14:30〜15:20</dd>
+                <dd>13:30〜14:20 &nbsp;または &nbsp;14:30〜15:20</dd>
               </div>
             </dl>
           </div>
