--- a/elementary/index.html
+++ b/elementary/index.html
@@ -293,9 +293,9 @@
           </dl>
         </div>
         <div class="fee-text">
-          <p>別途消費税（10%）がかかります。</p>
-          <p>施設維持費や冷暖房費などの諸経費は、<br>年間を通じて０円です。</p>
-          <p>兄弟姉妹で受講する場合、<br>下のお子さまの授業料が毎月10％オフとなります。</p>
+          <p>・別途消費税（10%）がかかります。</p>
+          <p>・施設維持費や冷暖房費などの諸経費は、<br>&nbsp;&nbsp;年間を通じて０円です。</p>
+          <p>・兄弟姉妹で受講する場合、<br>&nbsp;&nbsp;下のお子さまの授業料が毎月10％OFFとなります。</p>
         </div>
       </div>
 
