ハンバーガープリンス進学塾「について」

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="hamburger-wrapper">
       <ul class="hamburger-nav">
         <li class="hamburger-item"><a href="index.html">ホーム</a></li>
-        <li class="hamburger-item"><a href="about/index.html">プリンス進学塾とは</a></li>
+        <li class="hamburger-item"><a href="about/index.html">プリンス進学塾について</a></li>
         <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-feature">特徴</a></li>
         <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-greeting">塾長あいさつ</a></li>
         <li class="hamburger-item"><a href="elementary/index.html">小学生</a></li>
