--- a/elementary/index.html
+++ b/elementary/index.html
@@ -195,7 +195,7 @@
 
         <div class="schedule-box-subject">
           <p class="subject-menubar">対象科目</p>
-          <p class="subject-content">国・算・英・理社<span class="subject-content-sub">（理科＋社会で１教科扱い）</span></p>
+          <p class="subject-content">国・算・英・理社&nbsp;<span class="subject-content-sub">（理科＋社会で１教科扱い）</span></p>
         </div>
 
         <div class="schedule-box-day">
@@ -284,7 +284,7 @@
           <dl>
             <div class="material-01">
               <dt>国語・算数・英語</dt>
-              <dd>各¥2,500</dd>
+              <dd>各&nbsp;¥2,500</dd>
             </div>
             <div class="material-02">
               <dt>理科・社会セット</dt>
