スクロールイベント

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
       <div class="inquiry-texts">
         <div class="subtitle">
-          <h2>プリンス進学塾について</h2>
+          <h2 class="effect-fade">プリンス進学塾について</h2>
         </div>
         <p class="inquiry-text">小・中学生たちの夢をかなえるために、<br>
           日常の勉強から受験勉強までを塾で指導し、<br>
@@ -189,11 +189,11 @@
   <!-- course -->
   <section class="home-course">
     <div class="subtitle">
-      <h2>コース</h2>
+      <h2 class="effect-fade">コース</h2>
     </div>
     <p class="home-course-text">小４〜中３まで</p>
 
-    <div class="home-elementary">
+    <div class="home-elementary effect-fade">
       <img class="course-pc-img" src="images/home/hp/e_boy_hp.jpg" alt="">
       <img class="course-sp-img" src="images/home/sp/e_boy_sp.jpg" alt="">
 
@@ -209,7 +209,7 @@
       <img class="course-pc-img" src="images/home/hp/j_girl_hp.jpg" alt="">
       <img class="course-sp-img" src="images/home/sp/j_girl_sp.jpg" alt="">
 
-      <div class="access-menubar">
+      <div class="access-menubar effect-fade">
         <a href="juniorhighschool/index.html" class="menubar">
           <span>中学生の方へ</span>
           <span>指導方針、時間割、料金はこちら</span>
@@ -222,7 +222,7 @@
   <!-- access -->
   <section class="home-access">
     <div class="subtitle">
-      <h2>アクセス</h2>
+      <h2 class="effect-fade">アクセス</h2>
     </div>
     <p class="home-access-text">031-0041 &nbsp;青森県八戸市二十三日町14<br>
       TEL &nbsp;&nbsp;0178-22-1355<br>
@@ -241,7 +241,7 @@
   <!-- notice -->
   <section class="home-notice">
     <div class="subtitle">
-      <h2>おしらせ</h2>
+      <h2 class="effect-fade">おしらせ</h2>
     </div>
 
     <p class="home-notice-text">最新のおしらせや、中３特別講習会・全県テストの情報はFacebookにて公開しています。<br>
@@ -249,7 +249,7 @@
     </p>
 
     <div class="home-notice-list">
-      <div class="home-notice-sns">
+      <div class="home-notice-sns effect-fade">
         <img class="course-pc-img" src="images/home/hp/test_hp.jpg" alt="">
         <img class="course-sp-img" src="images/home/sp/test_sp.jpg" alt="">
         <div class="access-menubar">
@@ -260,7 +260,7 @@
         </div>
       </div>
 
-      <div class="home-notice-contact">
+      <div class="home-notice-contact effect-fade">
         <img class="course-pc-img" src="images/home/hp/studying_text_hp.jpg" alt="">
         <img class="course-sp-img" src="images/home/sp/studying_text_sp.jpg" alt="">
         <div class="access-menubar">
