--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
       <div class="eyechatch-sp-item">
         <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_02_sp.jpg" alt="">
-        <h1 class="home-eyechatch-text-sp home-eyechatch-text-sp-white">ひとり<br>ひとりの<br>チカラを<br>信じる</h1>
+        <h1 class="home-eyechatch-text-sp">ひとり<br>ひとりの<br>チカラを<br>信じる</h1>
       </div>
       <div class="eyechatch-sp-item">
         <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_03_sp.jpg" alt="">
